Finilized VM, added status saving to allow multiple sessions

--- a/VirtualMachine.ipynb
+++ b/VirtualMachine.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import deque,defaultdict\n",
+    "import pickle\n",
     "\n",
     "class VM:\n",
     "    def __init__(self,filename=\"\"):\n",
@@ -18,6 +19,7 @@
     "        if filename !=\"\":\n",
     "            self.readInput(filename)\n",
     "        self.i = 0\n",
+    "        self.input = []\n",
     "\n",
     "    def initialize(self,prog):\n",
     "        i = 0\n",
@@ -34,7 +36,7 @@
     "                read = f.read(2)\n",
     "                i+=1 \n",
     "    \n",
-    "    def rov(self,b): # register or valu\n",
+    "    def rov(self,b): # register or value\n",
     "        if b < 32768:\n",
     "            return b\n",
     "        else:\n",
@@ -150,9 +152,19 @@
     "            \n",
     "            elif op==20: # in: 20 a - read a character from the terminal and write its ascii code to <a>; \n",
     "                # it can be assumed that once input starts, it will continue until a newline is encountered; \n",
-    "                # this means that you can safely read whole lines from the keyboard and trust that they will be fully read\n",
-    "                print(\"OP 20 TODO\")\n",
-    "                return\n",
+    "                # this means that you can safely read whole lines from the keyboard and trust that they will be fully rea             \n",
+    "                if not len(self.input):\n",
+    "                    with open(\"status.sav\", \"wb\") as f:\n",
+    "                        pickle.dump(self.mem,f)\n",
+    "                        pickle.dump(self.reg,f)\n",
+    "                        pickle.dump(self.stack,f)\n",
+    "                        pickle.dump(self.i,f)\n",
+    "                    command = input()\n",
+    "                    for c in command:\n",
+    "                        self.input.append(ord(c))\n",
+    "                    self.input.append(ord('\\n'))\n",
+    "                self.reg[a%32768] = self.input.pop(0)\n",
+    "                self.i += 2\n",
     "            \n",
     "            elif op==21: # noop: 21 - no operation\n",
     "                self.i += 1\n",
@@ -163,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -184,13 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Do you want to start from last saved status [y/n]n\n",
       "Welcome to the Synacor Challenge!\n",
       "Please record your progress by putting codes like\n",
       "this one into the challenge website: XstgJSxeHSHA\n",
@@ -210,22 +223,51 @@
       "- doorway\n",
       "- south\n",
       "\n",
-      "What do you do?\n",
-      "OP 20 TODO\n"
+      "What do you do?\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-268-a30595cd8ce9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mvm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadInput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"synacor-challenge/challenge.bin\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mvm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-264-dcfbcf84f6ca>\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    152\u001b[0m                         \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m                         \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 154\u001b[0;31m                     \u001b[0mcommand\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    155\u001b[0m                     \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcommand\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    858\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    859\u001b[0m             )\n\u001b[0;32m--> 860\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    861\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    902\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    903\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 904\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    905\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    906\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
    "source": [
-    "vm = VM(\"synacor-challenge/challenge.bin\")\n",
+    "import os\n",
+    "\n",
+    "files = os.listdir('.')\n",
+    "\n",
+    "vm = VM()\n",
+    "mem = []\n",
+    "if 'status.sav' in files:\n",
+    "    print(\"Welcome to the Synacor Challenge!\")\n",
+    "    ans = input(\"Do you want to start from last saved status? [y/n]\")\n",
+    "    if ans[0]==\"Y\" or ans[0]=='y':\n",
+    "        with open(\"status.sav\", \"rb\") as f:\n",
+    "            mem = pickle.load(f)\n",
+    "            reg = pickle.load(f)\n",
+    "            stack = pickle.load(f)\n",
+    "            i = pickle.load(f)\n",
+    "\n",
+    "if len(mem):\n",
+    "    vm.initialize(mem)\n",
+    "    vm.i = i\n",
+    "    vm.reg = reg\n",
+    "    vm.stack = stack\n",
+    "else:\n",
+    "    vm.readInput(\"synacor-challenge/challenge.bin\")\n",
+    "    \n",
     "vm.run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
