Cracked vault and finished challenge

--- a/Vault.ipynb
+++ b/Vault.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found path!\n",
+      "((((((22+4)-11)*4)-18)-11)-1)\n",
+      "NEENWSEEWNNE\n"
+     ]
+    }
+   ],
    "source": [
+    "from queue import Queue\n",
+    "from collections import defaultdict\n",
+    "\n",
     "def coord(p):\n",
     "    return int(p.real), -int(p.imag)\n",
     "\n",
@@ -46,26 +59,7 @@
     "        xm,ym = coord(pm)\n",
     "        if 0<=xm<4 and 0<=ym<4 and not (xm==0 and ym==3):\n",
     "            s.append((pm,sm))\n",
-    "    return s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found path!\n",
-      "((((((22+4)-11)*4)-18)-11)-1)\n",
-      "NEENWSEEWNNE\n"
-     ]
-    }
-   ],
-   "source": [
-    "from queue import Queue\n",
+    "    return s\n",
     "\n",
     "pstart = 0-3j\n",
     "pend   = 3+0j\n",
@@ -73,11 +67,16 @@
     "p = pstart\n",
     "paths = Queue()\n",
     "paths.put( (p,\"\",\"22\") )\n",
-    "    \n",
+    "\n",
+    "visited = defaultdict(bool)\n",
+    "visited[p] = True\n",
+    "\n",
     "while True:\n",
     "    Found = False\n",
     "    p,moves,seq = paths.get()    \n",
     "    for pnew,sm in getMoves(p):\n",
+    "        if visited[pnew]:\n",
+    "            pass\n",
     "        mnew = moves+sm\n",
     "        xm,ym = coord(pnew)\n",
     "        seqnew = seq+grid[ym][xm]\n",
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
