Cracked vault and finished challenge

--- a/Vault.ipynb
+++ b/Vault.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,6 @@
    ],
    "source": [
     "from queue import Queue\n",
-    "from collections import defaultdict\n",
     "\n",
     "def coord(p):\n",
     "    return int(p.real), -int(p.imag)\n",
@@ -68,37 +67,35 @@
     "paths = Queue()\n",
     "paths.put( (p,\"\",\"22\") )\n",
     "\n",
-    "visited = defaultdict(bool)\n",
-    "visited[p] = True\n",
-    "\n",
     "while True:\n",
     "    Found = False\n",
     "    p,moves,seq = paths.get()    \n",
     "    for pnew,sm in getMoves(p):\n",
     "        if visited[pnew]:\n",
     "            pass\n",
-    "        mnew = moves+sm\n",
-    "        xm,ym = coord(pnew)\n",
-    "        seqnew = seq+grid[ym][xm]\n",
-    "        if seqnew[-1]!=\"+\" and seqnew[-1]!=\"-\" and seqnew[-1]!=\"*\":\n",
-    "            seqnew = \"(\"+seqnew+\")\"\n",
-    "        if pnew==pend:\n",
-    "            value = eval(seqnew)\n",
-    "            if value==30:\n",
-    "                print(\"Found path!\")\n",
-    "                print(seqnew)\n",
-    "                print(mnew)\n",
-    "                Found = True\n",
-    "                break\n",
     "        else:\n",
-    "            paths.put( ( pnew,mnew,seqnew ) )       \n",
+    "            mnew = moves+sm\n",
+    "            xm,ym = coord(pnew)\n",
+    "            seqnew = seq+grid[ym][xm]\n",
+    "            if seqnew[-1]!=\"+\" and seqnew[-1]!=\"-\" and seqnew[-1]!=\"*\":\n",
+    "                seqnew = \"(\"+seqnew+\")\"\n",
+    "            if pnew==pend:\n",
+    "                value = eval(seqnew)\n",
+    "                if value==30:\n",
+    "                    print(\"Found path!\")\n",
+    "                    print(seqnew)\n",
+    "                    print(mnew)\n",
+    "                    Found = True\n",
+    "                    break\n",
+    "            else:\n",
+    "                paths.put( ( pnew,mnew,seqnew ) )       \n",
     "    if Found:\n",
     "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
